--- a/module.yaml
+++ b/module.yaml
@@ -8,6 +8,9 @@ dependencies:
 
 settings:
   android:
-    namespace: "com.jetbrains.sample.app"
+    namespace: "xyz.malefic.android"
     signing: enabled
-  compose: enabled
+  compose:
+    enabled: true
+    experimental:
+      hotReload: enabled
