--- a/src/AndroidManifest.xml
+++ b/src/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
-        <activity android:name="com.jetbrains.sample.app.MainActivity"
+        <activity android:name="xyz.malefic.android.MainActivity"
                   android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
